# figure-webnav

./: .gitignore  README.md  pyproject.toml  run.py
src/webnav/: __init__.py  actions.py  agent.py  browser.py  config.py  dispatcher.py  executor.py  extractor.py  metrics.py  page_cleaner.py  perception.py  solver.py  state.py
tests/: conftest.py  test_agent.py  test_browser.py  test_dispatcher.py  test_executor.py  test_extractor.py  test_metrics.py  test_page_cleaner.py  test_perception.py  test_solver.py  test_state.py
